--- a/homework/Homework-1/flask_app/static/main/css/navbar.css
+++ b/homework/Homework-1/flask_app/static/main/css/navbar.css
@@ -3,9 +3,11 @@
     margin: 0%;
     width: 100vw;
     height: 8vh;
-
+    padding: 0%;
+    margin: 0%;
 
 }
+
 
 .navbar ul {
     display: flex;
